[AIOB-050] 强化统计与日志接口的错误分层语义